# el-slugify

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml
el-slugify/: Cargo.toml
el-slugify/benches/: benchmark_slugify.rs
el-slugify/src/: lib.rs
node-el-slugify/: Cargo.toml  README.md  package-lock.json  package.json
node-el-slugify/src/: lib.rs
node-el-slugify/test/: slugify.test.js
