[package]
name = "node-el-slugify"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]
authors = ["Ana Bujan <ana@eisberg-labs.com>"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
el-slugify = "0.1.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
